[package]
name = "rust-cms"
version = "0.1.0"
edition = "2024"
description = "A content management system written in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/rust-cms"
documentation = "https://docs.rs/rust-cms"

[dependencies]
hyper = "0.14.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
sqlx = { version = "0.5", features = ["runtime-tokio", "macros"] }